library: app: makefile: add missing CFLAGS
Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/app/Makefile
+++ b/app/Makefile
@@ -65,6 +65,7 @@ CFLAGS += -DGIT_REVISION=\"$(if $(GIT_REVISION),-g$(GIT_REVISION))\"
 CFLAGS += -g -O -DDEBUG
 
 CFLAGS += $(shell pkg-config --cflags libdigiapix)
+CFLAGS += $(shell pkg-config --cflags cloudconnector)
 
 # Target output to generate.
 APP_SRCS = $(wildcard $(SRC)/*.c)
