library: config: add the option to read the firmware version from a file
https://onedigi.atlassian.net/browse/DEL-8528

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/app/cfg_files/cc.conf
+++ b/app/cfg_files/cc.conf
@@ -17,11 +17,20 @@ device_type = "DEY device"
 
 # Firmware Version: Determines the version of the firmware running Cloud
 # Connector.
-# This version number is formed by 4 numeric values separated with a dot.
-# Remote Manager uses this value among 'device_type' and 'vendor_id' to cache
-# RCI device descriptor. Changing any of these values causes Remote Manager
-# to ask the device for a new RCI device descriptor.
-firmware_version = "0.0.0.1"
+# Possible values are:
+#   - A version number formed by 4 numeric values separated by a dot.
+#   - The absolute path "file:///<path>":  Absolute path to an existing file in
+#                       the system where the version is stored in the first line
+#                       following the same format: 4 numeric values separated by
+#                       a dot.
+#                       It can have a property format, where name and value are
+#                       separated by a white space or a '=', for example:
+#                            firmware = 2.1.3.0
+#                            version 5.2.4
+#
+# If this setting is not defined, or the specified file does not exist, the
+# version is read from '/etc/sw-versions'.
+firmware_version = "file:///etc/sw-versions"
 
 # Description: Description of the device running Cloud Connector. Max 63
 # characters.
