library: config: set 255 as the maximux length of 'device_type'
https://onedigi.atlassian.net/browse/DEL-8531

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/app/cfg_files/cc.conf
+++ b/app/cfg_files/cc.conf
@@ -12,6 +12,7 @@
 vendor_id = 0xFE080003
 
 # Device Type: Name of the device running Cloud Connector.
+# Max 255 characters.
 # By default, "DEY device"
 device_type = "DEY device"
 
