--- a/app/Makefile
+++ b/app/Makefile
@@ -65,7 +65,7 @@ CFLAGS += -DGIT_REVISION=\"$(if $(GIT_REVISION),-g$(GIT_REVISION))\"
 CFLAGS += -g -O -DDEBUG
 
 CFLAGS += $(shell pkg-config --cflags libdigiapix)
-CFLAGS += $(shell pkg-config --cflags cloudconnector)
+CFLAGS += $(shell PKG_CONFIG_PATH=../library:$${PKG_CONFIG_PATH} pkg-config --cflags cloudconnector)
 
 # Target output to generate.
 APP_SRCS = $(wildcard $(SRC)/*.c)
