app-server: register requests to get and set the connector configuration
Registered targets are 'cc_get_config' and 'cc_set_config'.
They allow to get the whole configuration or only specific settings, and set
the value of provided settings.
The name of the settings is the same used in the configuration file.

Some examples:

   * To get the complete configuration:

     <sci_request version="1.0">
       <data_service>
         <targets>
           <device id="00000000-00000000-000XXXXX-XXXXXXXX" />
         </targets>
        <requests>
          <device_request target_name="cc_get_config"></device_request>
        </requests>
       </data_service>
     </sci_request>

   * To get only several settings:

     <sci_request version="1.0">
       <data_service>
         <targets>
           <device id="00000000-00000000-000XXXXX-XXXXXXXX" />
         </targets>
        <requests>
          <device_request target_name="cc_get_config">
              {
                 "settings": ["vendor_id", "wait_times", "enable_reconnect", "altitude", "virtual-dirs",      "system_monitor_metrics"]
              }
          </device_request>
        </requests>
       </data_service>
     </sci_request>

   * To set configuration settings:

     <sci_request version="1.0">
       <data_service>
         <targets>
           <device id="00000000-00000000-000XXXXX-XXXXXXXX" />
         </targets>
        <requests>
          <device_request target_name="cc_set_config">
              {
                 "enable_system_monitor":true,
                 "system_monitor_sample_rate":30,
                 "system_monitor_upload_samples_size":2
              }
          </device_request>
        </requests>
       </data_service>
     </sci_request>

https://onedigi.atlassian.net/browse/DEL-8628

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/app-server/Makefile
+++ b/app-server/Makefile
@@ -64,8 +64,9 @@ CFLAGS += -DGIT_REVISION=\"$(if $(GIT_REVISION),-g$(GIT_REVISION))\"
 
 CFLAGS += -g -O -DDEBUG
 
-CFLAGS += $(shell pkg-config --cflags libdigiapix)
 CFLAGS += $(shell PKG_CONFIG_PATH=../library:$${PKG_CONFIG_PATH} pkg-config --cflags cloudconnector)
+CFLAGS += $(shell pkg-config --cflags libdigiapix)
+CFLAGS += $(shell pkg-config --cflags json-c)
 
 # Target output to generate.
 APP_SRCS = $(wildcard $(SRC)/*.c)
@@ -74,6 +75,8 @@ SRCS = $(APP_SRCS)
 
 # Libraries to Link
 LIBS += $(shell PKG_CONFIG_PATH=../library:$${PKG_CONFIG_PATH} pkg-config --libs --static cloudconnector)
+LIBS += $(shell pkg-config --libs --static libdigiapix)
+LIBS += $(shell pkg-config --libs json-c)
 
 # Generated Executable Name.
 EXECUTABLE = cloudconnector-srv
