services-client: rename directories, binaries, and log entries to use cccs
'cccs', ConnectCore Cloud Services, is the official name for Digi Remote Manager
services for ConnectCore devices. Use this name to rename source code
directories, resulting binaries, pkg-config files, etc.

This commit keeps the legacy 'cloudconnector' executable or static library.

https://onedigi.atlassian.net/browse/DEL-8628

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@
 *.o
 *~
 *.map
+libcccs*
 libcloudconnector.*
 app/cloud-connector
+cccs-daemon/cccsd
+cccs-gs-demo/cccs-gs-demo
+cccs-legacy-app/cloud-connector
+library/*.pc
