--- a/cccs-daemon/cfg_files/cccs.conf
+++ b/cccs-daemon/cfg_files/cccs.conf
@@ -1,23 +1,20 @@
 #===============================================================================
-# Cloud Connector General Settings
+# ConnectCore Cloud Services Daemon General Settings
 #===============================================================================
 
-# Vendor ID: Identifier of the Remote Manager user account. This value is used to
-# determine the account to which a device belongs to.
-# It can be obtained under 'Admin > Account Settings > My Account >
-# Vendor Information' within your Remote Manager account.
+# Vendor ID: Identifier of the Remote Manager user account. This value is used
+# to determine the account to which a device belongs to.
 # If this setting is not properly configured or is empty, an error is thrown
 # while connecting.
 # The format of this setting is: '0xXXXXXXXX'.
 vendor_id = 0xFE080003
 
-# Device Type: Name of the device running Cloud Connector.
+# Device Type: Name of the device running CCCSD.
 # Max 255 characters.
 # By default, "DEY device"
 device_type = "DEY device"
 
-# Firmware Version: Determines the version of the firmware running Cloud
-# Connector.
+# Firmware Version: Determines the version of the firmware running CCCSD.
 # Possible values are:
 #   - A version number formed by 4 numeric values separated by a dot.
 #   - The absolute path "file:///<path>":  Absolute path to an existing file in
@@ -33,12 +30,12 @@ device_type = "DEY device"
 # version is read from '/etc/sw-versions'.
 firmware_version = "file:///etc/sw-versions"
 
-# Description: Description of the device running Cloud Connector. Max 63
-# characters.
+# Description: Description of the device running CCCSD.
+# Max 63 characters.
 description = ""
 
-# Contact: Contact information of the maintainer of the device.  Max 63
-# characters.
+# Contact: Contact information of the maintainer of the device.
+# Max 63 characters.
 contact = ""
 
 # Location: Location of the device. This does not imply GPS coordinates, just a 
@@ -46,10 +43,10 @@ contact = ""
 location = ""
 
 #===============================================================================
-# Cloud Connector Connection Settings
+# ConnectCore Cloud Services Daemon Connection Settings
 #===============================================================================
 
-# URL: Remote Manager URL to which Cloud Connector will connect to.
+# URL: Remote Manager URL to which CCCSD will connect to.
 # By default, "edp12.devicecloud.com"
 url = "edp12.devicecloud.com"
 
@@ -57,8 +54,8 @@ url = "edp12.devicecloud.com"
 # By default, "/etc/ssl/certs/drm_cert.pem".
 client_cert_path = "/mnt/data/drm_cert.pem"
 
-# Enable Reconnect: If set to 'true', Cloud Connector attempts to reconnect to
-# Remote Manager after a connection is lost or there is a connection error.
+# Enable Reconnect: If set to 'true', CCCSD attempts to reconnect to Remote
+# Manager after a connection is lost or there is a connection error.
 # Enabled by default.
 enable_reconnect = true
 
@@ -68,26 +65,25 @@ enable_reconnect = true
 # By default, 30 seconds.
 reconnect_time = 30
 
-# Keep Alive Time: Determines the time frequency in seconds in which Cloud
-# Connector sends 'Keep Alive' messages to Remote Manager to maintain an open
-# connection. It must be between 5 and 7200 seconds.
-# By default, 75 seconds.
+# Keep Alive Time: Determines the time frequency in seconds in which CCCSD sends
+# 'Keep Alive' messages to Remote Manager to maintain an open connection. It
+# must be between 5 and 7200 seconds. By default, 75 seconds.
 keep_alive_time = 30
 
 # Server Keep Alive Time: Determines the time frequency in seconds in which
-# Cloud Connector expects to receive 'Keep Alive' messages from Remote Manager
-# to maintain an open connection. It must be between 5 and 7200 seconds.
+# CCCSD expects to receive 'Keep Alive' messages from Remote Manager to
+# maintain an open connection. It must be between 5 and 7200 seconds.
 # By default, 75 seconds.
 server_keep_alive_time = 30
 
 # Wait Times: Determines the number of lost 'Keep Alive' messages (sent or
-# received) before considering the connection between Cloud Connector and Device
-# Cloud lost. It must be between 2 and 64.
+# received) before considering the connection between CCCSD and Remote Manager
+# server lost. It must be between 2 and 64.
 # By default, 5.
 wait_times = 5
 
 #===============================================================================
-# Cloud Connector Services Settings
+# ConnectCore Cloud Services Daemon Services Settings
 #===============================================================================
 
 # Enable File System: Set it to 'true' to enable access to the file system from
@@ -123,18 +119,18 @@ virtual-dirs
 }
 
 # Firmware Download Path: Absolute path to download the firmware packages from
-# the cloud. It must be an existing directory.
+# Remote Manager server. It must be an existing directory.
 firmware_download_path = /mnt/update
 
 # Enables on the fly firmware update support
 on_the_fly = false
 
 #===============================================================================
-# Cloud Connector System Monitor Settings
+# ConnectCore Cloud Services Daemon System Monitor Settings
 #===============================================================================
 
-# Enable System Monitor: Set it to 'true' to let Cloud Connector to gather
-# system information periodically and send it to Remote Manager via Data Points.
+# Enable System Monitor: Set it to 'true' to let CCCSD to gather system
+# information periodically and send it to Remote Manager via Data Points.
 # Enable Data Service option must be set to 'true'.
 # Enabled by default.
 enable_system_monitor = true
@@ -177,7 +173,7 @@ system_monitor_upload_samples_size = 2
 system_monitor_metrics = { "*" }
 
 #===============================================================================
-# Cloud Connector Static Location settings
+# ConnectCore Cloud Services Daemon Static Location settings
 #===============================================================================
 
 # Static location. Set it to 'true' to use a static location for GPS state.
@@ -190,10 +186,10 @@ longitude = 0.0
 altitude = 0.0
 
 #===============================================================================
-# Cloud Connector Logging Settings
+# ConnectCore Cloud Services Daemon Logging Settings
 #===============================================================================
 
-# Log Level: Establishes the log level of Cloud Connector.
+# Log Level: Establishes the log level of CCCSD.
 # Possible values are:
 #   - "debug": Log all messages.
 #   - "info":  Log only information and error messages.
