library: config: new options to buffer not uploaded samples
Added options to configure:

* The path of the directory to store the system monitor and custom samples that
  could not be uploaded to DRM ('data_backlog_path')

* The maximum data to store in KB ('data_backlog_size')

https://onedigi.atlassian.net/browse/DEL-8697

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/cccs-legacy-app/cfg_files/cc.conf
+++ b/cccs-legacy-app/cfg_files/cc.conf
@@ -177,6 +177,25 @@ system_monitor_upload_samples_size = 2
 system_monitor_metrics = { "*" }
 
 #===============================================================================
+# ConnectCore Cloud Services Daemon Data Backlog settings
+#===============================================================================
+
+# Data backlog path: Absolute path to store data that could not be uploaded to
+# the server. This includes System Monitor samples and custom samples.
+# Stored data in the backlog is sent when it is possible and removed after being
+# uploaded.
+# The path must be an existing directory or empty. If it is empty (""), this
+# feature is disabled and data is not locally stored when the upload fails.
+# By default, "/tmp".
+data_backlog_path = "/tmp"
+
+# Data backlog size: Maximum size in KB of the data backlog before the oldest
+# entries are purged. If size is 0, this feature is disabled and data is not
+# locally stored when the upload fails.
+# By default, 1024 KB.
+data_backlog_size = 0
+
+#===============================================================================
 # Cloud Connector Static Location settings
 #===============================================================================
 
