library: config: disable system monitor by default and fix default monitor samples
https://onedigi.atlassian.net/browse/DEL-7777

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/cccs-daemon/cfg_files/cccs.conf
+++ b/cccs-daemon/cfg_files/cccs.conf
@@ -131,8 +131,7 @@ on_the_fly = false
 
 # Enable System Monitor: Set it to 'true' to let CCCSD to gather system
 # information periodically and send it to Remote Manager via Data Points.
-# Enable Data Service option must be set to 'true'.
-# Enabled by default.
+# Disabled by default.
 enable_system_monitor = true
 
 # System monitor sample rate: Determines the frequency at which the service
