--- a/cccs-legacy-app/cfg_files/cc.conf
+++ b/cccs-legacy-app/cfg_files/cc.conf
@@ -135,8 +135,7 @@ on_the_fly = false
 
 # Enable System Monitor: Set it to 'true' to let Cloud Connector to gather
 # system information periodically and send it to Remote Manager via Data Points.
-# Enable Data Service option must be set to 'true'.
-# Enabled by default.
+# Disabled by default.
 enable_system_monitor = true
 
 # System monitor sample rate: Determines the frequency at which the service
