library: config: allow an empty 'firmware_download_path' to disable the feature
If 'firmware_download_path' is defined as empty in the configuration file, the
firmware upload feature is disabled. If not empty, it must be an existing
directory in the device.

https://onedigi.atlassian.net/browse/DEL-7777

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/cccs-daemon/cfg_files/cccs.conf
+++ b/cccs-daemon/cfg_files/cccs.conf
@@ -119,7 +119,9 @@ virtual-dirs
 }
 
 # Firmware Download Path: Absolute path to download the firmware packages from
-# Remote Manager server. It must be an existing directory.
+# Remote Manager server. It must be an existing directory or empty.
+# If it is "", firmware upload feature is disabled.
+# Empty by default.
 firmware_download_path = /mnt/update
 
 # Enables on the fly firmware update support
