--- a/cccs-legacy-app/cfg_files/cc.conf
+++ b/cccs-legacy-app/cfg_files/cc.conf
@@ -123,7 +123,9 @@ virtual-dirs
 }
 
 # Firmware Download Path: Absolute path to download the firmware packages from
-# the cloud. It must be an existing directory.
+# the cloud. It must be an existing directory or empty.
+# If it is "", firmware upload feature is disabled.
+# Empty by default.
 firmware_download_path = /mnt/update
 
 # Enables on the fly firmware update support
