library: config: add general documentation to the configuration file
https://onedigi.atlassian.net/browse/DEL-7777

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/cccs-daemon/cfg_files/cccs.conf
+++ b/cccs-daemon/cfg_files/cccs.conf
@@ -1,3 +1,15 @@
+# Configuration file for 'cccsd'.
+#
+# By default, 'cccsd' uses the file '/etc/cccs.conf'.
+# You can specify another file with '-c' (or '--config-file=<PATH>') command
+# line argument followed by the configuration file path.
+#
+# Each setting has a default value used in case it is not defined.
+# Setting default values may be modified in this configuration file.
+#
+# Use the # character to indicate a comment, but only if it is the very first
+# character on the line.
+
 #===============================================================================
 # ConnectCore Cloud Services Daemon General Settings
 #===============================================================================
