--- a/cccs-legacy-app/cfg_files/cc.conf
+++ b/cccs-legacy-app/cfg_files/cc.conf
@@ -1,3 +1,15 @@
+# Configuration file for 'cloud-connector'.
+#
+# By default, 'cloud-connector' uses the file '/etc/cc.conf'.
+# You can specify another file with '-c' (or '--config-file=<PATH>') command
+# line argument followed by the configuration file path.
+#
+# Each setting has a default value used in case it is not defined.
+# Setting default values may be modified in this configuration file.
+#
+# Use the # character to indicate a comment, but only if it is the very first
+# character on the line.
+
 #===============================================================================
 # Cloud Connector General Settings
 #===============================================================================
