library: config: ignore 'firmware_download_path' for dual boot systems with 'on_the_fly' enabled
If 'on_the_fly' is enabled in a dual boot system, this commit ignores the value
of 'firmware_download_path'.

'firmware_download_path' value is checked for:

* Single boot systems
* Dual boot systems with 'on_the_fly' disabled

Related to commit 98eeb9a98b9ed6a3774f7bf9b37cd7432c74e742
(library: config: allow an empty 'firmware_download_path' to disable the feature)

https://onedigi.atlassian.net/browse/DEL-7777

Signed-off-by: Tatiana Leon <Tatiana.Leon@digi.com>

--- a/cccs-daemon/cfg_files/cccs.conf
+++ b/cccs-daemon/cfg_files/cccs.conf
@@ -132,11 +132,18 @@ virtual-dirs
 
 # Firmware Download Path: Absolute path to download the firmware packages from
 # Remote Manager server. It must be an existing directory or empty.
-# If it is "", firmware upload feature is disabled.
+# This setting is not used in a dual boot system with 'on_the_fly' enabled.
+# To disable firmware upload feature:
+#   - For single boot systems, its value must be "" or not defined.
+#   - For dual boot systems, its value must be "" or not defined, and 'on_the_fly'
+#     must be disabled.
 # Empty by default.
 firmware_download_path = /mnt/update
 
-# Enables on the fly firmware update support
+# Enables on the fly firmware update support.
+# Only for dual boot systems, for single boot systems this value is ignored.
+# See 'firmware_download_path' for information on disabling firmware upload
+# feature.
 on_the_fly = false
 
 #===============================================================================
